[package]
name = "restate-cloud-tunnel-client"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bytes = "1.10.1"
clap = {version = "4.5.40", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = "0.3.31"
hickory-resolver = "0.25.2"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-rustls = "0.27.7"
hyper-util = "0.1.14"
restate-cloud-tunnel-client = { git = "https://github.com/restatedev/restate.git", rev = "4d21d173713dc5374bab3318ab51ec8ac2769888", default-features = false }
restate-types = { git = "https://github.com/restatedev/restate.git", rev = "4d21d173713dc5374bab3318ab51ec8ac2769888", default-features = false }
serde = "1.0.219"
serde_with = "3.13.0"
tokio = { version = "1.45.1", features = ["rt", "fs", "sync"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"]}
